<resources>
    <string name="app_name">تقویم فارسی </string>
    <string name="widget_name">تقویم فارسی </string>
    <string name="widget_mini_name">Persian Calendar (mini)</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">Open</string>
    <string name="accept">OK</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="about_developers_list" translatable="false">"Ebrahim Byagowi (@ebraminio)
Hamid Safdari (@hamidsafdari)
Behdad Abedi (@behdad222)
Hamidreza Bayat (@HrBDev)
Alireza Afkar (@alirezaafkar)
Mehdi Dimyadi (@MEHDIMYADI)"</string>
    <string name="about_designers_list" translatable="false">"Mehrara Abedi (Icon design)
Behdad Pournader (Previous designer)
Iman Soltanian (Previous designer)"</string>
    <string name="about_contributors_list" translatable="false">"Javad Arjmandi (@La-Volpe)
Mehdi Sadeghi (@mehdisadeghi)
Masood Fallahpoor (@MasoodFallahpoor)
Abbas Oveissi (@abbas-oveissi)
Muhammad Shuaib (@yethrosh)
Aysha Aminnejad (@aysha319)"</string>
    <string name="about_help_subtitle" translatable="false">این نسخهٔ سال %s-%s است.</string>
    <string name="about_help_sum" translatable="false">"برای اطمینان از صحت مناسبت‌های قمری سال‌های بعد نیاز است چند ماه پیش از تحویل سال، اگر توسعهٔ برنامه هنوز ادامه داشت، برنامه را به‌روز کنید چرا که آن مناسبت‌های قمری تا زمان انتشار نسخهٔ جدید به صورت رسمی در تقویم کشور مشخص نشده‌اند. در صورتی که توسعهٔ برنامه در سالی که از برنامه استفاده می‌کنید ادامه نداشت، پشنهاد می‌شود مراقب صحت تعطیلی‌ها به کمک منابع دیگر باشید. مناسبت‌های خورشیدی رسمی برای همه سال‌ها اعمال شده است ولی ممکن است در سالی که آن مناسبت را در تقویم مشاهده می‌کنید، آن مناسبت دیگر تعطیل رسمی نبوده یا دیگر نباشد.

مناسبت‌های این برنامه با تقویم ایران و افغانستان تنظیم شده‌است. ممکن است در کشورهای دیگر این مناسبت‌ها کاربرد نداشته باشند ولی در امکانات مختلف برنامه سعی شده جامعیت برنامه حفظ شود. به همین منظور می‌توانید با تنظیم مناسبت‌ها آن را به حالت دلخواه خود درآورید.

دسترسی مکان به منظور امکان تنظیم اوقات شرعی در تنظیمات گرفته شده است، اگر مکانتان مثلاً از شهری به شهری دیگر تغییر می‌کند نیاز است با هر تغییر، آن را تنظیم کنید.

تقویم قمری ممکن است دارای اشکال باشد به همین دلیل ممکن است نیاز باشد به صورت دستی در تنظیمات آن را اصلاح کنید. راه‌حل‌هایی از جمله به‌روزرسانی اختلاف از طریق اینترنت مطلوب توسعهٔ این برنامه نبوده به این دلیل که نیازمند دسترسی اینترنت است و هدف توسعهٔ این برنامه عدم اخذ دسترسی تا جای ممکن بوده است.

تضمینی در صحت کارکرد برنامه وجود ندارد، فقط سعی شده برنامه‌ای مفید ارائه شود. مشهور است که هیچ برنامه، نرم‌افزار و الگوریتمی بی‌نقص نیست و ممکن است نیاز باشد خروجی برنامه را با منابع دیگر بررسی کنید. ممکن است به دلیل حجم کم حافظهٔ دستگاه، برنامه قادر به به‌روزرسانی شمارهٔ روز ماه در نوار اعلان نباشد و روز عقب‌تری را نشان دهد. پیشنهاد می‌شود سایر برنامه‌های دستگاه را که حافظهٔ اضافی گرفته‌اند حذف کنید یا گزینهٔ نوار اعلان برنامه را غیر فعال کنید و یا برنامهٔ دیگری را بیازمایید.

انتخاب طراحی برنامه این بوده که اذان فقط شامل چهار الله اکبر اول باشد. اذان‌های متنوع باعث افزایش حجم می‌شود و امکان انتخاب اذان از گوشی باعث پیچیدگی و نیز بیشتر شدن دسترسی‌های برنامه می‌شود؛ به همین دلیل حداقل تا این نسخه از برنامه امکان آن وجود ندارد.

این تقویم به صورت شخصی، بدون هیچ منفعت مالی و با کمک افراد و کتابخانه‌های نرم‌افزاری‌ای که در زیر ذکر شده است، به امید اینکه مفید باشد، طراحی شده‌است و با مجوز جی‌پی‌ال نسخهٔ ۳ انتشار یافته است.

مجوز جی‌پی‌ال به معنی آن است که استفاده از کدهای این برنامه فقط در صورتی امکان‌پذیر است که کدهای تغییر داده‌شده و به پروژه اضافه‌شده (به اصطلاح لینک‌شده) تحت همین مجوز به صورت آزاد منتشر شوند. انتخاب این مجوز به دلیل استفاده از کدهایی با همین مجوز بوده است و استفاده از کدهای این برنامه در برنامه‌های غیر متن‌باز از نظر مجوز استفاده‌شده در این پروژه و خصوصاً کتابخانه‌های جی‌پی‌ال استفاده شده نادرست است و در صورت استفاده از کدها و کتابخانه‌های جی‌پی‌ال نیاز است منبع و مجوز آن را به دقت در چنین صفحه‌ای در برنامه بیاورید.

مانند قسمت‌های دیگر این برنامه، تضمینی در درستی علمکرد قطب‌نما نیست خصوصاً اینکه این قابلیت به وجود و درست تنظیم بودن سنسور قطب‌نمای دستگاه وابسته است. پیشنهاد می‌شود شمال را همیشه از طرق دیگر بدست آورید تا بتوانید از سایر اطلاعاتی که آن قسمت در اختیار قرار می‌دهد استفاده کنید ولی معمولاً این قسمت در صورتی که دستگاه را قبل از ورود به این بخش تخت و صاف قرار داده باشید درست عمل می‌کند."</string>
    <string name="capricorn_emoji" translatable="false">♑</string>
    <string name="aquarius_emoji" translatable="false">♒</string>
    <string name="pisces_emoji" translatable="false">♓</string>
    <string name="aries_emoji" translatable="false">♈</string>
    <string name="taurus_emoji" translatable="false">♉</string>
    <string name="gemini_emoji" translatable="false">♊</string>
    <string name="cancer_emoji" translatable="false">♋</string>
    <string name="leo_emoji" translatable="false">♌</string>
    <string name="virgo_emoji" translatable="false">♍</string>
    <string name="libra_emoji" translatable="false">♎</string>
    <string name="scorpio_emoji" translatable="false">♏</string>
    <string name="sagittarius_emoji" translatable="false">♐</string>
    <string name="calendar">اصلی</string>
    <string name="date_converter">تبدیل تاریخ</string>
    <string name="compass">قطب نما</string>
    <string name="settings">تنظیم</string>
    <string name="about">other</string>
    <string name="comment">نظر به برنامه</string>
    <string name="other">برنامه های توصیه شده</string>
    <string name="contact">تماس با ما</string>
    <string name="exit">خروج</string>
    <string name="add_event">Add event</string>
    <string name="device_calendar_does_not_support">Device calendar does not support the action</string>
    <string name="today">Today</string>
    <string name="return_to_today">Return to today</string>
    <string name="goto_date">Go to date</string>
    <string name="go">Go</string>
    <string name="search_in_events">Search in events</string>
    <string name="date_diff_text">Distance: %s days (~%s years and %s months and %s days)</string>
    <string name="start_of_year_diff">%s days (~%s weeks or %s months) from start of the year</string>
    <string name="end_of_year_diff">%s days (~%s weeks or %s months) to end of the year</string>
    <string name="date_copied_clipboard">Copied to clipboard</string>
    <string name="year_name">Year name</string>
    <string name="year1">Monkey</string>
    <string name="year2">Rooster</string>
    <string name="year3">Dog</string>
    <string name="year4">Pig</string>
    <string name="year5">Rat</string>
    <string name="year6">Ox</string>
    <string name="year7">Tiger</string>
    <string name="year8">Rabbit</string>
    <string name="year9">Dragon</string>
    <string name="year10">Snake</string>
    <string name="year11">Horse</string>
    <string name="year12">Sheep</string>
    <string name="zodiac">Zodiac</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="moonInScorpio">Moon is in Scorpio</string>
    <string name="events">Events</string>
    <string name="no_event">No event or appointment is found for this day.</string>
    <string name="warn_if_events_not_set">To select and show holidays and events you like, go to the settings</string>
    <string name="sunrise">Sunrise</string>
    <string name="midday">Midday</string>
    <string name="sunset">Sunset</string>
    <string name="length_of_day">Daytime: %sh %sm</string>
    <string name="remaining_daylight">Remaining: %sh %sm</string>
    <string name="owghat">Pray times</string>
    <string name="imsak">Imsak</string>
    <string name="azan1">Fajr</string>
    <string name="aftab1">Sunrise</string>
    <string name="azan2">Dhuhr</string>
    <string name="azan3">Asr</string>
    <string name="aftab2">Sunset</string>
    <string name="azan4">Maghrib</string>
    <string name="azan5">Isha</string>
    <string name="aftab3">Midnight</string>
    <string name="select_type_date">Select date type</string>
    <string name="year">Year</string>
    <string name="select_year">Select year</string>
    <string name="month">Month</string>
    <string name="select_month">Select month</string>
    <string name="day">Day</string>
    <string name="select_day">Select day</string>
    <string name="date_exception">The date you entered was not valid!</string>
    <string name="compass_not_found">Compass sensor not found</string>
    <string name="calibrate_compass_summary">For improving compass sensor accuracy move the phone away from any magnetic objects, tilt and rotate the device back and forth on every axis.</string>
    <string name="level">Level</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="set_location">In order to have Sun and Moon location, and Qibla direction, set the location in the settings</string>
    <string name="pref_header_interface_calendar">Interface and Calendar</string>
    <string name="pref_header_widget_location">Widget and Notification</string>
    <string name="pref_header_location_athan">Location and Athan</string>
    <string name="pref_interface">Interface</string>
    <string name="language">Language</string>
    <string name="skin">Skin</string>
    <string name="select_skin">Select a skin</string>
    <string name="persian_digits">Persian Digits</string>
    <string name="enable_persian_digits">Enable Persian Digits</string>
    <string name="events_summary">Events to show</string>
    <string name="show_device_calendar_events">Personal Calendar Events</string>
    <string name="show_device_calendar_events_summary">Show personal calendar events</string>
    <string name="calendars_priority">Calendars Priority</string>
    <string name="calendars_priority_summary">Set calendars to show priority or hide them</string>
    <string name="astronomical_info">Astronomical Information</string>
    <string name="astronomical_info_summary">Show additional information like constellation, years names and moon in scorpio</string>
    <string name="week_of_year">Week of Year</string>
    <string name="week_of_year_summary">Show week of year on calendar</string>
    <string name="week_start">Week Start</string>
    <string name="week_start_summary">Select week start day</string>
    <string name="week_ends">Weekends</string>
    <string name="week_ends_summary">Select weekends days</string>
    <string name="islamic_offset">Islamic offset</string>
    <string name="islamic_offset_summary">Adjust Islamic calendar by adding a number</string>
    <string name="clock_in_24">Clock in 24 hour</string>
    <string name="showing_clock_in_24">Show the clock in 24 hour</string>
    <string name="widget_text_color">Widget Text Color</string>
    <string name="select_widgets_text_color">Select custom color for widgets texts</string>
    <string name="clock_on_widget">Clock on the Widget</string>
    <string name="showing_clock_on_widget">Show the clock on widget</string>
    <string name="iran_time">Iran Time</string>
    <string name="showing_iran_time">Widgets and notifications in Iran TimeZone</string>
    <string name="customize_widget">Widget Customization</string>
    <string name="which_one_to_show">Which one to show</string>
    <string name="customize_widget_summary">What to show from notification and widges to make them more compact</string>
    <string name="notify_date">Enable Date Notification</string>
    <string name="enable_notify">Persistent notification for all date types</string>
</resources>